--- a/src/app/components/comiteView/comiteView.html
+++ b/src/app/components/comiteView/comiteView.html
@@ -6,21 +6,19 @@
           <md-icon  md-svg-icon="/assets/img/back3.svg"></md-icon>
         </md-button>
       </div>
-      <div layout-xs="column" layout-xs="column" layout="row" layout-align="center center">
-        <div>
-          <h2>Comité</h2>
-        </div>
-      </div>
-      <div layout="row" layout-xs="column">
-        <div flex="50" flex-xs="100" flex-offset-xs="0" flex-sm="50" flex-offset-sm="0" flex-md="50" flex-offset-md="0" layout="column" layout-xs="column" class="fond" style="background-color: #B0DFEE">
+      <div layout-xs="column" layout="row" layout-align="center center">
+        <div flex="80" flex-xs="100" flex-offset-xs="0" flex-sm="50" flex-offset-sm="0" flex-md="50" flex-offset-md="0" layout="column" layout-xs="column" class="fond" style="background-color: #B0DFEE">
           <div flex style="margin-top: 20px;">
             <img style="display: block; margin: auto; margin-top: 6px; width: 200px;" src="/assets/img/comite.png">
             <h3 style="text-align: center;" class="ima">Nombre: <strong>{{ vm.nombre }}</strong></h3>
             <h3 style="text-align: center;" class="ima">Comuna: <strong>{{ vm.comuna_id }}</strong></h3>
           </div>
         </div>
-        <div flex="30" flex-xs="100" flex-offset-xs="0" flex-sm="50" flex-offset-sm="0" flex-md="50" flex-offset-md="0" layout="column" layout-xs="column" layout-align="center center" class="fond" style="background-color: #B0DFEE;">
-          <div layout="column" layout-xs="column">
+      </div>
+      <div layout="row" layout-xs="column" layout-align="center center">
+        
+        <div flex="80" flex-xs="100" flex-offset-xs="0" flex-sm="50" flex-offset-sm="0" flex-md="50" flex-offset-md="0" layout="column" layout-xs="column" layout-align="center center" class="fond" style="background-color: #B0DFEE;">
+          <div layout="row" layout-xs="column">
             <div flex>
               <md-button ui-sref="menuRegistros">
                 <md-card class="md-whiteframe-8dp mdcardbutton">
