--- a/src/app/components/comites/comites.html
+++ b/src/app/components/comites/comites.html
@@ -5,10 +5,10 @@
         <div layout-xs="column" layout-xs="column" layout="column" layout-align="center center" style="margin-top: -50px;">
           <center>
             <h3>Lista de Comités</h3>
-            <!--<h5>INGRESE NOMBRE DEL COMITÉ Ó DE LA COMUNA</h5>-->
+            <h5>INGRESE NOMBRE DEL COMITÉ Ó DE LA COMUNA</h5>
           </center>
         </div>  
-        <!--<div flex layout="row">
+        <div flex layout="row">
           <div flex="30" flex-offset="30" flex-xs="60" flex-offset-xs="10"> 
             <md-input-container>
               <input ng-model="vm.datocomite" type="text" placeholder="Buscar...">
@@ -19,10 +19,9 @@
                 <md-icon md-svg-src="/assets/img/busqueda.svg"></md-icon>
             </md-button>
           </div>
-        </div>-->
+        </div>
 
-         <!--Revisar-->
-        <div ng-controller="AutoCtrl as ctrl" layout="column" ng-cloak>
+        <!--<div ng-controller="AutoCtrl as ctrl" layout="column" ng-cloak>
           <md-content class="md-padding" style="width: 300px;">
             <form ng-cloack>
               <md-autocomplete
@@ -39,7 +38,6 @@
                   </md-button>
                 </md-item-template>
                 <md-not-found>
-                  <!-- revisar md-item-text -->
                   <span md-highlight-text="ctrl.searchText" md-highlight-flags="^i">{{item.nombre}}</span>
                 </md-not-found>
               </md-autocomplete>
@@ -47,13 +45,11 @@
           </md-content>
         </div>
 
-
-        <!--Revisar-->
         <div flex style="margin-bottom: 15px;">
           <center>
             <md-button id="registro" class="md-raised" md-colors="{background: 'LightBlue-900'}" layout-fill style="min-height: 50px; width: 200px;" ng-click="vm.autocompletar($event, vm.comite)">Buscar Comité</md-button>
           </center>
-        </div>
+        </div>-->
 
       </div>
     </div>
