--- a/src/app/components/medidores/medidorRegistrosMensuales.html
+++ b/src/app/components/medidores/medidorRegistrosMensuales.html
@@ -1,55 +1,56 @@
 <div layout-padding>
   <div class="fond mar">
+    <div layout="row" flex layout-xs="column">
+      <md-button class="md-icon-button md-raised" layout-fill ui-sref="medidores" style="margin-bottom: -10px; margin-top: 10px;">
+        <md-icon  md-svg-icon="/assets/img/back3.svg"></md-icon>
+      </md-button>
+    </div>
     <div flex="40" flex-offset="30" flex-md="60" flex-offset-md="20" flex-sm="70" flex-offset-sm="15" flex-xs="90" flex-offset-xs="5" class="mar">
       <div flex flex-xs="90" flex-offset-xs="5">
         <div layout-xs="column" layout-xs="column" layout="column" layout-align="center center" style="margin-top: -50px;">
-          <h2>Buscar Lectura Mensual</h2>
-          <h4>INGRESE CÓDIGO DEL MEDIDOR</h4>
-        </div>  
-        <div flex layout="row">
-          <div flex="30" flex-offset="30" flex-xs="60" flex-offset-xs="10"> 
-            <md-input-container>
-              <input ng-model="vm.datolectura" type="number" placeholder="Buscar...">
-            <md-input-container>
-          </div> 
-          <div flex=10 flex-xs="20">
-              <md-button class="md-fab md-primary" aria-label="Use Android" md-colors="{background: 'light-blue-600'}" ng-click="vm.busqueda(vm.datolectura)">
-                  <md-icon md-svg-src="/assets/img/busqueda.svg"></md-icon>
-              </md-button>
+          <div flex flex-xs="100" flex-offset-xs="0" flex-sm="50" flex-offset-sm="0" flex-md="50" flex-offset-md="0" layout="column" layout-xs="column" class="fond" style="background-color: grey; width: 300px;">
+            <div flex>
+              <h3 style="text-align: center;" class="ima">Número Medidor: <strong>{{ vm.num_medidor }}</strong></h3>
+              <h3 style="text-align: center;" class="ima">Marca Medidor: <strong>{{ vm.marca_medidor }}</strong></h3>
+            </div>
+          </div>
+          <div>
+            <center>
+              <h2>Registros de Lectura Mensual</h2>
+            </center>
           </div>
         </div>
       </div>
-    </div>
-    <div layout="row" flex layout-xs="column">
-      <md-button class="md-icon-button md-raised" layout-fill ui-sref="menuListas" style="margin-bottom: 10px;">
-        <md-icon  md-svg-icon="/assets/img/back3.svg"></md-icon>
-      </md-button>
     </div>
     <div flex="94" flex-offset="3" flex-md="94" flex-offset-md="3" flex-xs="94" flex-offset-xs="3" class="fond" style="margin-bottom: 20px">
       <md-table-container>
         <table md-table md-row-select multiple md-progress="promise">
           <thead md-head md-order="query.order" md-on-reorder="getDesserts">
             <tr md-row>
+              <th md-column md-numeric>Código</th>
               <th md-column md-numeric>Fecha Registro</th>
               <th md-column md-numeric>Lectura/Lec. Ant.</th>
               <th md-column md-numeric>Saldo Pagado</th>
               <th md-column md-numeric>Consumo</th>
               <th md-column md-numeric>Valor a Pagar</th>
+              <th md-column md-numeric>Vivienda</th>
               <th md-column md-numeric>Medidor</th>
               <th md-column md-numeric></th>
             </tr>
           </thead>
           <tbody md-body>
             <tr md-row md-select="dessert" md-select-id="name" md-auto-select class="tabla" ng-repeat="lectura in vm.lecturaMensual">
+              <td md-cell>{{ lectura.id }}</td>
               <td md-cell>{{ lectura.fecha_registro_consumo }}</td>
               <td md-cell>{{ lectura.lectura + ' | ' + lectura.lectura_anterior}}</td>
               <td md-cell>{{ lectura.saldo_pagado }}</td>
               <td md-cell>{{ lectura.consumo }}</td>
               <td md-cell>{{ lectura.valor_pagar }}</td>
+              <td md-cell>{{ lectura.vivienda.direccion}}</td>
               <td md-cell>{{ lectura.medidor.num_medidor }}</td>
               <td md-cell>
-                <md-button class="md-icon-button" ng-click="vm.eliminarLecturaMensual(lectura.id)">
-                  <md-icon  md-svg-icon="/assets/img/deleteuser.svg"></md-icon>
+                <md-button class="md-icon-button">
+                  <md-icon  md-svg-icon="/assets/img/edituser.svg"></md-icon>
                 </md-button>
               </td>
             </tr>
@@ -58,14 +59,10 @@
       </md-table-container>
       <md-table-pagination md-limit="query.limit" md-limit-options="[5, 10, 15]" md-page="query.page" md-total="{{desserts.count}}" md-on-paginate="getDesserts" md-page-select></md-table-pagination>
     </div>
-    <!--<div flex="20" layout="row" flex layout-xs="column">
-      <md-button class="md-raised volverListas" md-colors="{background: 'cyan-600'}" layout-fill ui-sref="menuListas">Volver</md-button>
-    </div>-->
     <div layout="row" flex layout-xs="column">
-      <md-button class="md-icon-button md-raised" layout-fill ui-sref="menuListas" style="margin-bottom: 10px; margin-top: -13px;">
+      <md-button class="md-icon-button md-raised" layout-fill ui-sref="medidores" style="margin-bottom: 10px; margin-top: -13px;">
         <md-icon  md-svg-icon="/assets/img/back3.svg"></md-icon>
       </md-button>
-    </div>
+    </div> 
   </div>
-  
-</div>
+ </div> 
