Dialogs faltantes. registro en tabla parametros. cambios en registro rapido

--- a/src/app/components/allClients/allClients.html
+++ b/src/app/components/allClients/allClients.html
@@ -37,7 +37,7 @@
               <div flex="94" flex-offset="3" flex-md="94" flex-offset-md="3" flex-xs="94" flex-offset-xs="3" class="fond" style="margin-bottom: 20px">
                 <md-table-container>
                   <table md-table md-row-select multiple md-progress="promise">
-                    <thead md-head md-order="query.order" md-on-reorder="getDesserts">
+                    <thead md-head md-order="query.order">
                       <tr md-row>
                         <th md-column md-numeric>ID</th>
                         <th md-column md-numeric>RUT</th>
@@ -45,9 +45,9 @@
                         <th md-column md-numeric>Apellidos</th>
                         <th md-column md-numeric>Telefono</th>
                         <th md-column md-numeric>Email</th>
-                        <th md-column md-numeric>Residencia</th>
-                        <th md-column md-numeric></th>
-                        <th md-column md-numeric></th>
+                        <th md-column md-numeric>Subsidio</th>
+                        <th md-column md-numeric ng-if="vm.usuario.superadmin == 1"></th>
+                        <th md-column md-numeric ng-if="vm.usuario.superadmin == 1"></th>
                       </tr>
                     </thead>
                     <tbody md-body>
@@ -58,13 +58,13 @@
                         <td md-cell>{{ client.apellido_pater + ' ' + client.apellido_mater }}</td>
                         <td md-cell>{{ client.telefono }}</td>
                         <td md-cell>{{ client.email }}</td>
-                        <td md-cell>{{ client.residencia }}</td>
-                        <td md-cell>
+                        <td md-cell>{{ client.subsidio_id }}</td>
+                        <td md-cell ng-if="vm.usuario.superadmin == 1">
                           <md-button class="md-icon-button" ng-click="vm.updatecliente(client.id)" style="margin-right: -40px;">
                             <md-icon  md-svg-icon="/assets/img/edituser.svg"></md-icon>
                           </md-button>
                         </td>
-                        <td md-cell>
+                        <td md-cell ng-if="vm.usuario.superadmin == 1">
                           <md-button class="md-icon-button" ng-click="vm.eliminarcliente(client.id)" style="margin-right: -25px;">
                             <md-icon  md-svg-icon="/assets/img/deleteuser.svg"></md-icon>
                           </md-button>
@@ -112,28 +112,26 @@
                       <tr md-row>
                         <th md-column md-numeric>Codigo</th>
                         <th md-column md-numeric>Dirección</th>
-                        <th md-column md-numeric>Subsidio</th>
                         <th md-column md-numeric>Fecha Ingreso</th>
                         <th md-column md-numeric>Ubicación</th>
                         <th md-column md-numeric>Estado</th>
-                        <th md-column md-numeric></th>
-                        <th md-column md-numeric></th>
+                        <th md-column md-numeric ng-if="vm.usuario.superadmin == 1"></th>
+                        <th md-column md-numeric ng-if="vm.usuario.superadmin == 1"></th>
                       </tr>
                     </thead>
                     <tbody md-body>
                       <tr md-row md-select="dessert" md-select-id="name" md-auto-select class="tabla" ng-repeat="viviend in vm.vivienda">
                         <td md-cell>{{ viviend.id }}</td>
                         <td md-cell>{{ viviend.direccion }}</td>
-                        <td md-cell>{{ viviend.subsidio.des_subsidio }}</td>
                         <td md-cell>{{ viviend.fecha_ingreso }}</td>
                         <td md-cell>{{ viviend.comuna.des_comu }}</td>
                         <td md-cell>{{ viviend.estado.des_estado }}</td>
-                        <td md-cell>
+                        <td md-cell ng-if="vm.usuario.superadmin == 1">
                           <md-button class="md-icon-button" ng-click="vm.actualizarvivienda(viviend.id)" style="margin-right: -40px;">
                             <md-icon  md-svg-icon="/assets/img/edituser.svg"></md-icon>
                           </md-button>
                         </td>
-                        <td md-cell>
+                        <td md-cell ng-if="vm.usuario.superadmin == 1">
                           <md-button class="md-icon-button" ng-click="vm.eliminarvivienda(viviend.id)" style="margin-right: -25px;">
                             <md-icon  md-svg-icon="/assets/img/deleteuser.svg"></md-icon>
                           </md-button>
@@ -185,8 +183,8 @@
                         <th md-column md-numeric>Lectura Inicial</th>
                         <th md-column md-numeric>Vivienda</th>
                         <th md-column md-numeric>Estado</th>
-                        <th md-column md-numeric></th>
-                        <th md-column md-numeric></th>
+                        <th md-column md-numeric ng-if="vm.usuario.superadmin == 1"></th>
+                        <th md-column md-numeric ng-if="vm.usuario.superadmin == 1"></th>
                       </tr>
                     </thead>
                     <tbody md-body>
@@ -198,12 +196,12 @@
                         <td md-cell>{{ medid.lectura_inicial }}</td>
                         <td md-cell>{{ medid.vivienda.direccion }}</td>
                         <td md-cell>{{ medid.estado_medidor.des_estado_medidor }}</td>
-                        <td md-cell>
+                        <td md-cell ng-if="vm.usuario.superadmin == 1">
                           <md-button class="md-icon-button" ng-click="vm.actualizarmedidor(medid.id)" style="margin-right: -40px;">
                             <md-icon  md-svg-icon="/assets/img/edituser.svg"></md-icon>
                           </md-button>
                         </td>
-                        <td md-cell>
+                        <td md-cell ng-if="vm.usuario.superadmin == 1">
                           <md-button class="md-icon-button" ng-click="vm.eliminarmedidor(medid.id)" style="margin-right: -25px;">
                             <md-icon  md-svg-icon="/assets/img/deleteuser.svg"></md-icon>
                           </md-button>
