--- a/src/app/components/registroMensual/registroMensual.html
+++ b/src/app/components/registroMensual/registroMensual.html
@@ -105,7 +105,7 @@
             </div>
             <div flex>
               <md-input-container class="md-icon-float md-block">
-                <label>Saldo Pagado (CLP) $:</label>
+                <label>Saldo Anterior (CLP) $:</label>
                 <md-icon md-svg-src="/assets/img/saldo.svg"></md-icon>
                 <input ng-model="vm.lecMensual.saldo_pagado" type="number">
               </md-input-container>
