--- a/src/app/components/tabla/tabla.html
+++ b/src/app/components/tabla/tabla.html
@@ -38,7 +38,7 @@
               <th md-column md-numeric>Apellidos</th>
               <th md-column md-numeric>Telefono</th>
               <th md-column md-numeric>Email</th>
-              <th md-column md-numeric>Residencia</th>
+              <th md-column md-numeric>Subsidio</th>
               <th md-column md-numeric></th>
               <th md-column md-numeric></th>
               <th md-column md-numeric></th>
@@ -52,7 +52,7 @@
               <td md-cell>{{ client.apellido_pater + ' ' + client.apellido_mater }}</td>
               <td md-cell>{{ client.telefono }}</td>
               <td md-cell>{{ client.email }}</td>
-              <td md-cell>{{ client.residencia }}</td>
+              <td md-cell>{{ client.subsidio_id }}</td>
               <td md-cell>
                 <md-button class="md-icon-button" ng-click="vm.vercliente($index)" style="margin-right: -40px;">
                   <md-icon  md-svg-icon="/assets/img/profile1.svg"></md-icon>
