--- a/src/app/components/allClients/allClientsActualizarVivienda.html
+++ b/src/app/components/allClients/allClientsActualizarVivienda.html
@@ -27,25 +27,14 @@
         </div>
       </div>
       <div layout-xs="column" class="datos">
-        <div layout="row" layout-xs="column">
-          <div flex>
-            <md-input-container md-no-float class="md-block">
-              <label>Comuna</label>
-              <md-icon md-svg-src="/assets/img/comuna.svg"></md-icon>
-              <md-select ng-model="vm.vivienda.comuna_id">
-                <md-option ng-repeat="comu in vm.comuna | orderBy : 'id'" value="{{ comu.id }}">{{ comu.des_comu }}</md-option>
-              </md-select>
-            </md-input-container>
-          </div>
-          <div flex>
-            <md-input-container md-no-float class="md-block">
-              <label>Subsidio</label>
-              <md-icon md-svg-src="/assets/img/subsidio1.svg"></md-icon>
-              <md-select ng-model="vm.vivienda.subsidio_id">
-                <md-option ng-repeat="subsi in vm.subsidio" value="{{ subsi.id }}">{{ subsi.des_subsidio }}</md-option>
-              </md-select>
-            </md-input-container>
-          </div>
+        <div flex="50" flex-xs="100">
+          <md-input-container md-no-float class="md-block">
+            <label>Comuna</label>
+            <md-icon md-svg-src="/assets/img/comuna.svg"></md-icon>
+            <md-select ng-model="vm.vivienda.comuna_id">
+              <md-option ng-repeat="comu in vm.comuna | orderBy : 'id'" value="{{ comu.id }}">{{ comu.des_comu }}</md-option>
+            </md-select>
+          </md-input-container>
         </div>
       </div>
       
