--- a/src/app/components/menuRegistros/menuRegistros.html
+++ b/src/app/components/menuRegistros/menuRegistros.html
@@ -9,9 +9,30 @@
       <div layout-xs="column" layout-xs="column" layout-lg="row" layout="row" layout-align="center center">
         <div layout="column" layout-sm="column" layout-xs="column">
         
-          <div layout-md="column" layout-lg="row">
+          <div layout-md="column" layout-lg="row" ng-if="vm.usuario.superadmin == 1">
             <div flex>
-              <md-button ui-sref="registroRapidoVivienda">
+              <md-button ui-sref="registroRapidoSuperAdmin">
+                <md-card class="md-whiteframe-8dp">
+                  <md-card-title>
+                    <md-card-title-text>
+                      <span class="md-headline">Registro</span>
+                      <span class="md-headline">Rápido</span>
+                    </md-card-title-text>
+                    <md-card-title-media>
+                      <div class="md-media-md card-media">
+                        <center><img style="width: 60px" src="/assets/img/fast.png"></img></center>
+                      </div>
+                    </md-card-title-media>
+                  </md-card-title>
+                </md-card>
+              </md-button>
+            </div>
+          </div>
+          <br>
+
+          <div layout-md="column" layout-lg="row" ng-if="vm.usuario.superadmin == 0">
+            <div flex>
+              <md-button ui-sref="registroRapido">
                 <md-card class="md-whiteframe-8dp">
                   <md-card-title>
                     <md-card-title-text>
@@ -31,7 +52,7 @@
           <br>
 
           <div layout-md="column" layout-lg="row">
-            <div flex>
+            <div flex ng-if="vm.usuario.superadmin == 1 || vm.usuario.superadmin == 0">
               <md-button ui-sref="registro">
                 <md-card class="md-whiteframe-8dp">
                   <md-card-title>
@@ -48,7 +69,7 @@
                 </md-card>
               </md-button>
             </div>
-            <div flex>
+            <div flex ng-if="vm.usuario.superadmin == 1 || vm.usuario.superadmin == 0">
               <md-button ui-sref="registroVivienda">
                 <md-card class="md-whiteframe-8dp">
                   <md-card-title>
@@ -65,7 +86,7 @@
                 </md-card>
               </md-button>
             </div> 
-            <div flex>
+            <div flex ng-if="vm.usuario.superadmin == 1 || vm.usuario.superadmin == 0">
               <md-button ui-sref="asignarVivienda">
                 <md-card class="md-whiteframe-8dp">
                   <md-card-title>
@@ -85,7 +106,25 @@
           </div>
 
           <div layout-md="column" layout-lg="row">
-            <div flex>
+            <div flex ng-if="vm.usuario.superadmin == 1">
+              <md-button ui-sref="registroMedidorSuperAdmin">
+                <md-card class="md-whiteframe-8dp">
+                  <md-card-title>
+                    <md-card-title-text>
+                      <span class="md-headline">Registrar</span>
+                      <span class="md-headline">Medidor</span>
+                    </md-card-title-text>
+                    <md-card-title-media>
+                      <div class="md-media-md card-media">
+                        <center><img style="width: 60px" src="/assets/img/medidor.svg"></img></center>
+                      </div>
+                    </md-card-title-media>
+                  </md-card-title>
+                </md-card>
+              </md-button>
+            </div>
+
+            <div flex ng-if="vm.usuario.superadmin == 0">
               <md-button ui-sref="registromedidor">
                 <md-card class="md-whiteframe-8dp">
                   <md-card-title>
@@ -102,7 +141,8 @@
                 </md-card>
               </md-button>
             </div>
-            <div flex>
+
+            <div flex ng-if="vm.usuario.superadmin == 1 || vm.usuario.superadmin == 0">
               <md-button ui-sref="registroMensual">
                 <md-card class="md-whiteframe-8dp">
                   <md-card-title>
@@ -119,7 +159,7 @@
                 </md-card>
               </md-button>
             </div> 
-            <div flex>
+            <div flex ng-if="vm.usuario.superadmin == 1 || vm.usuario.superadmin == 0">
               <md-button ui-sref="registroPagos">
                 <md-card class="md-whiteframe-8dp">
                   <md-card-title>
@@ -139,7 +179,7 @@
           </div>
 
           <div layout-md="column" layout-lg="row">
-            <div flex>
+            <div flex ng-if="vm.usuario.superadmin == 1 || vm.usuario.superadmin == 0">
               <md-button ui-sref="abonoBoleta">
                 <md-card class="md-whiteframe-8dp">
                   <md-card-title>
