--- a/src/app/components/registroVivienda/actualizarVivienda.html
+++ b/src/app/components/registroVivienda/actualizarVivienda.html
@@ -27,55 +27,20 @@
         </div>
       </div>
       <div layout-xs="column" class="datos">
-        <div layout="row" layout-xs="column">
-          <div flex>
-            <md-input-container md-no-float class="md-block">
-              <label>Comuna</label>
-              <md-icon md-svg-src="/assets/img/comuna.svg"></md-icon>
-              <md-select ng-model="vm.vivienda.comuna_id">
-                <md-option ng-repeat="comu in vm.comuna | orderBy : 'id'" value="{{ comu.id }}">{{ comu.des_comu }}</md-option>
-              </md-select>
-            </md-input-container>
-          </div>
-          <div flex>
-            <md-input-container md-no-float class="md-block">
-              <label>Subsidio</label>
-              <md-icon md-svg-src="/assets/img/subsidio1.svg"></md-icon>
-              <md-select ng-model="vm.vivienda.subsidio_id">
-                <md-option ng-repeat="subsi in vm.subsidio" value="{{ subsi.id }}">{{ subsi.des_subsidio }}</md-option>
-              </md-select>
-            </md-input-container>
-          </div>
+        <div flex="50" flex-xs="100">
+          <md-input-container md-no-float class="md-block">
+            <label>Comuna</label>
+            <md-icon md-svg-src="/assets/img/comuna.svg"></md-icon>
+            <md-select ng-model="vm.vivienda.comuna_id">
+              <md-option ng-repeat="comu in vm.comuna | orderBy : 'id'" value="{{ comu.id }}">{{ comu.des_comu }}</md-option>
+            </md-select>
+          </md-input-container>
         </div>
       </div>
-      <!--<<div layout-xs="column" class="datos">
-        <div>
-          <div layout="row" layout-xs="column">
-            div flex>
-              <md-input-container md-no-float class="md-block">
-                <label>Región</label>
-                <md-select ng-model="vm.comuna.region_id">
-                  <md-option ng-repeat="regi in vm.region | orderBy : 'id'" value="{{ regi.id }}">{{ regi.des_zona }}</md-option>
-                </md-select>
-              </md-input-container>
-            </div>
-            <div flex>
-              <md-input-container md-no-float class="md-block">
-                <label>Comuna</label>
-                <md-icon md-svg-src="/assets/img/usuario.svg"></md-icon>
-                <input ng-model="vm.vivienda.comuna_id" type="text">
-              </md-input-container>
-            </div>X
-          </div>
-        </div>
-      </div>-->
       
       <div layout="row" layout-align="center center" flex layout-xs="column">
         <md-button id="registro" class="md-raised" md-colors="{background: 'LightBlue-900'}" layout-fill style="min-height: 50px;" ng-click="vm.actualizarvivienda(vm.vivienda)">Actualizar Vivienda</md-button>
       </div>
-      <!--<div layout="row" layout-align="end center" layout-xs="column">
-        <md-button class="md-raised volverRegistros" md-colors="{background: 'cyan-600'}" layout-fill ui-sref="viviendas">Volver</md-button>
-      </div>-->
       <div layout="row" layout-align="end center" flex layout-xs="column">
         <md-button class="md-icon-button md-raised" layout-fill ui-sref="viviendas">
           <md-icon  md-svg-icon="/assets/img/back3.svg"></md-icon>
